[package]
name = "chat_tut"
version = "0.1.0"
authors = ["Avea <aveakrause@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.0"
async-std = "1"
crossbeam = "0.8"